# gurkecode

./: .gitignore  LICENSE  README.md  engine.py  gurkecode.yaml  main.py  pyproject.toml
config/: __init__.py  loader.py  models.py  validator.py
prompt/: __init__.py  builder.py  environment.py  reminder.py
protocol/: __init__.py  adapter.py  anthropic.py  models.py  openai.py
tools/: __init__.py  base.py  bash.py  edit_file.py  glob_search.py  grep_search.py  read_file.py  registry.py  write_file.py
ui/: __init__.py  app.py  banner.py  chat_view.py  input_box.py  models.py  provider_select.py  status_bar.py
