[project]
name = "gurkecode"
version = "0.1.0"
description = "多协议 LLM 终端对话客户端"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.60.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
gurkecode = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["config", "protocol", "ui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
